# jetson-camera

./: .gitignore  README.md  model.py  requirements-jetson.txt  requirements.txt
app/: __init__.py  ai_config_store.py
configs/: alarm_config.yaml  config.json  model_config.yaml  roi_config.json
cpp_tensorrt/: CMakeLists.txt  README.md
cpp_tensorrt/include/: common.hpp  data_types.hpp  roi_alarm.hpp  trt_detector.hpp
cpp_tensorrt/src/: main.cpp  roi_alarm.cpp  trt_detector.cpp
docs/: OPTIMIZATION_SUMMARY.md  ROI_INTERFACE_BRIEF.md  SAFETY_VISION_PLAN.md  deployment_flow.md  jetson_environment.md  model_io.md
python_prototype/: alarm_logic.py  config.json  data_models.py  detector.py  logger.py  main.py  onnx_validator.py  requirements.txt  roi_manager.py  visualizer.py
scripts/: export_onnx.py  run_cpp_tensorrt_regression.sh  run_demo.py  run_tests.sh  validate_onnx.py
tests/: test_ai_config_api.py  test_alarm.py  test_detector.py  test_roi.py
